@@ -40,4 +40,4 @@ votes-to-jail-player: 4
 
 ### Config version ###
 #Do not modify this, otherwise plugin may not work properly
-v: Alpha0.2.1
+v: Alpha0.2.2
